# IR2117

./: README.md  math_problem.cpp
Mediana_ModoEigen/: example.cpp  median.cpp  mode.cpp
apuntes/topics/: CMakeLists.txt  package.xml  publisher.cpp  subscriber.cpp
arith_mean/: arith_mean.cpp  median.cpp
hello/: hello1.cpp
math_problem/: math_problem.cpp
media_modo_mediana/: arith_mean.cpp  mode.cpp
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/examples_sum/lib/examples_sum/: sum
ros2_ws/install/examples_sum/share/examples_sum/: package.sh
ros2_ws/install/examples_topics/share/examples_topics/: local_setup.sh  package.sh
ros2_ws/log/: latest_build
ros2_ws/src/cpp_srvcli/: add_two_ints_server.cpp  package.xml
ros2_ws/src/examples/suma_ros/: sum.cpp
sum/: sum.cpp
sum_ab/: sum_ab.cpp
tb3_ws/install/: local_setup.sh  setup.sh
tb3_ws/install/obstacles/lib/obstacles/: avoidance  detector
tb3_ws/install/obstacles/share/obstacles/: local_setup.sh  package.sh
tb3_ws/install/olympic/lib/olympic/: rings  rings_action_client  rings_action_server
tb3_ws/install/olympic/share/olympic/: local_setup.sh  package.sh
tb3_ws/install/olympics_interfaces/share/olympics_interfaces/: package.bash  (+4 more)
tb3_ws/log/: latest_build
tb3_ws/olympic/: CMakeLists.txt  clienteturtlesim.cpp  rings.cpp
tb3_ws/olympic/src/: rings.cpp  rings_action_client.cpp  rings_action_server.cpp
tb3_ws/olympics_interfaces/: CMakeLists.txt  package.xml
tb3_ws/src/install/: local_setup.sh  setup.sh
tb3_ws/src/log/: latest_build
tb3_ws/src/obstacles/: CMakeLists.txt  avoidance.cpp  detector.cpp  package.xml
tb3_ws/src/obstacles/launch/: triple_detector.launch.py
tb3_ws/src/robot_trajectory/: CMakeLists.txt  package.xml  square_odom.cpp  square_param.cpp  wandering.cpp
tb3_ws/src/robot_trajectory/square/: CMakeLists.txt
tb3_ws/src/robot_trajectory/squareodom/: CMakeLists.txt  package.xml  square_odom.cpp
tb3_ws/src/robot_trajectory/squareparam/: CMakeLists.txt  squareparam.cpp
tb3_ws/src/robot_trajectory/src/: square.cpp
(+34 files in other folders)
